Changed title -> who

--- a/panels/hello_world.html
+++ b/panels/hello_world.html
@@ -5,7 +5,7 @@ panel_custom:
   - name: hello_world
     sidebar_title: Hello World
     config:
-      title: Paulus
+      who: Paulus
 -->
 <dom-module id='ha-panel-hello_world'>
   <template>
